# SeaBattle

./: CMakeLists.txt
include/: Board.h  Cell.h  Scene.h  SeaBattle.h  Shape.h  Ship.h  StorageManager.h  Utils.h
src/: Board.cpp  Cell.cpp  Scene.cpp  Shape.cpp  Ship.cpp  StorageManager.cpp  Utils.cpp  main.cpp
